@@ -22,7 +22,7 @@
 class CIcon extends CSpan {
 
 	public function __construct($title, $class, $action = '') {
-		parent::__construct(SPACE, $class.' menu_icon shadow');
+		parent::__construct(null, $class.' menu_icon shadow');
 		$this->attr('title', $title);
 		if (!empty($action)) {
 			$this->attr('onclick', 'javascript: '.$action);
