@@ -25,7 +25,7 @@
 }
 
 .menu_icon {
-	display: inline-block;
+	display: block;
 	background-repeat: no-repeat;
 	height: 16px;
 	width: 16px;
